# AAR

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  tailwind.config.ts  zeabur.json
backend/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/routers/: action_items.py  auth.py  courses.py  knowledge_points.py  review_logs.py  tags.py
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/_core/hooks/: useAuth.ts
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: alert-dialog.tsx  card.tsx  checkbox.tsx  input.tsx  progress.tsx  toast.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  ReviewsPage.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  select.tsx  textarea.tsx
src/lib/: hooks.ts
src/pages/: ActionItemsPage.tsx  AnalyticsPage.tsx  CourseDetailPage.tsx  CoursesPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  ReviewsPage.tsx
